--- a/Models/Aventador_S.html
+++ b/Models/Aventador_S.html
@@ -120,7 +120,8 @@
           <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/index.php">Login</a></button>
         </form>
     </div>
-  </nav> 
+  </nav>
+
   <div class="row" style="font-size: 16px">
     <div class="col-md-6">
       <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
@@ -133,8 +134,7 @@
       </div>
     </div>
     <div class="col-md-6">
-      <br><br><br><br>
-      <img src="../img/aventador/2.png" alt="" align="right" width="100%">
+      <img src="../img/aventador/2.png" alt="" align="right" width="100%" height="100%">
     </div>
   </div>
   <div class="row">
@@ -167,6 +167,7 @@
       <img src="../img/aventador/4.png" alt="" align="right" width="100%">
     </div>
   </div>
+
   <div class="row">
     <div class="col-md-6">
       <img src="../img/aventador/5.png" alt="" align="left">
@@ -181,7 +182,8 @@
     </div>
   </div>
   <img src="../img/aventador/6.png" width="100%">
-  <div class="container">
+  
+  <div class="container driving">
     <h2 style="text-align: center;"><b>DRIVING</b> DYNAMICS</h2>
     <p class="text-center">
       In addition to its beating heart, Aventador S is also endowed with an incredibly sophisticated brain: the innovative Lamborghini Active Vehicle Dynamics (LDVA) control unit, a system of active technologies that can manage each of the dynamic axles of the vehicle. The lateral vehicle dynamics is controlled by a steering system that involves all four wheels using Lamborghini Dynamic Steering (LDS) and Lamborghini Rear-wheel Steering (LRS). The vertical vehicle dynamics is handled by the Lamborghini Magneto-rheological suspension (LMS) and the active rear aerodynamics. And the longitudinal dynamics relies on the four-wheel drive system (4WD). The LDVA system combines all the information coming from the car’s sensors and establishes in real time the best setting for each driving condition. The result is performance that is absolutely perfect, safe, and compelling.
