--- a/Models/Huracan_EVO.html
+++ b/Models/Huracan_EVO.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" type="text/css" href="../css/custom.css">
   <link rel="stylesheet" type="text/css" href="../css/footer.css">
   <link rel="stylesheet" type="text/css" href="css/custom_models.css">
-  
+  <link rel="stylesheet" href="1.css">
+  <link rel="stylesheet" type="text/css" href="css/flickity.css">
+  <script src="js/flickity.pkgd.js" type="text/javascript" charset="utf-8" async defer></script>
   <script src="js/custom_spek.js" type="text/javascript"></script>
   <script src="js/custom_model.js" type="text/javascript"></script>
 
@@ -122,30 +124,29 @@
     </div>
   </nav> 
 
+  <img src="img/rwd/rwdlayarutama.png" width="100%">
+
   <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>OVERVIEW</b></h2>
         <p>
           The Huracán EVO represents the natural evolution of the most successful V10 in Lamborghini history. It is the result of fine-tuning and consolidation which involves the already existing features and performance of Huracán, combined with the development of new solutions in terms of efficiency and design. But overall this vehicle stands out for its ability to anticipate the moves and satisfy the desires of the driver, in harmony with the Lamborghini DNA.
         </p>
       </div>
-      <div class="col-md-6">
-        image
-      </div>
     </div>
-  </div>
-
-  <br>
-  
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        image
-      </div>
-      <div class="col-md-6">
-        <h2><b>EMOTION</b></h2>
+    <div class="col-md-6">
+      <img src="img/rwd/rwd1.png" alt="" align="right" width="100%">
+    </div>
+  </div>  
+  <div class="row">
+    <div class="col-md-6">
+      <img src="img/rwd/rwd2.png" alt="" width="105%" align="left">
+    </div>
+    <div class="col-md-6">
+      <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
+        <br><br><br><h2><b>EMOTION</b></h2>
         <p>
           The Huracán EVO was developed to amplify your daily routine by anticipating the needs of the driver, making your day-to-day experience behind the wheel unique and totally personal. A state-of-the-art control system and innovative touchscreen easily manage the car’s functions and entertainment system. This, combined with dazzling aerodynamic design, elevate the performance and driving emotions to unprecedented levels.
         </p>
@@ -155,37 +156,33 @@
 
     <br>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
+  <div civ class="row">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>EXTERIOR </b>DESIGN</h2>
         <p>
           The design of the Huracán EVO does not present a radical change in the original iconic shape and proportions, rather it represents a natural evolution that introduces sophisticated aerodynamic solutions, while remaining faithful to the iconic Lamborghini design. The front bumper adopts unmistakable Lamborghini design cues such as signature Y-shape stylistic elements, bonnet lines inspired by the Countach, skirt air ducts reminiscent of the Murciélago, and high-mounted exhaust tailpipes that recall the highest performing models of the Lamborghini range. The model also introduces the new 20” Aesir rims and debuts Ad Personam colors for the car body, including Arancio Xanto [Orange].
         </p>
         <p>These elements produce an evolution projected towards the future that does not forget the past.</p>
       </div>
-      <div class="col-md-6">
-        image
-      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="img/rwd/rwd3.png" width="105%" height="100%" align="right">
     </div>
   </div>
-
-  <br>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        image
-      </div>
-      <div class="col-md-6">
-        <h2><b>INTERIOR</b></h2>
+  <div class="row">
+    <div class="col-md-6">
+      <img src="img/rwd/rwd4.png" width="100%" align="left">
+    </div>
+    <div class="col-md-6">
+      <br><br><h2><b>INTERIOR</b></h2>
+      <h2><b>INTERIOR</b></h2>
         <p>
           The interior perfectly mirrors the evolutionary design of the Huracán EVO.
         </p>
         <p>
           The cockpit features a cutting-edge 8.4” touchscreen system built into the central tunnel, which makes it possible to control the car and entertainment functions with a tap of your fingertips. The exclusive interior finishes, stemming from authentic Italian design, are made with the finest-quality materials: the upholstery is available in leather, Alcantara and—for the first time—Carbon Skin®, an innovative carbon fiber material exclusively available with Lamborghini. All these details make the on-board experience even more unique and refined.        
         </p>
-      </div>
     </div>
   </div>
 
@@ -196,19 +193,41 @@
     </p>
   </div>
   <br>
-  <div class="container-fluid">
-    <div class="row" style="height: 100px;">
-      <div class="col-md-3" style="background: red">
-        img
+  <img src="img/rwd/rwd5.png" height="100%">
+  <br><br><br>
+
+  <!-- CUSTOM SLIDERR -->
+  <div class="gallery js-flickity">
+    <div class="gallery-cell">
+      <h3>ENGINE & TRANSMISSION</h3>
+        <img src="img/mesin/engine-transmisi.png" alt="" width="63%" height="35%" >
+      <div class="tengah">
       </div>
-      <div class="col-md-9" style="background: blue">
-        img
-      </div>
+      <p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>SAFETY & ASSISTANCE SYSTEM</h3>
+      <img src="img/mesin/safety.jpg" height="170px;">
+      <p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>ANIMA</h3>
+      <img src="img/mesin/anima.png" height="170px;">
+      <p style="overflow: scroll; height: 300px;">What really makes Urus a true Lamborghini is the electronic platform that controls the systems and radically transforms its dynamic behavior, taking the driver experience to another level. The ANIMA Selector is the secret of Lamborghini driving dynamics, the key command to choose the desired setup. The vehicle adapts according to the driving mode selected. There are three on-road modes: STRADA for easiness of driving, comfort and safety; SPORT for agility, responsiveness and fun to drive; CORSA for precision and maximum performance. The three off-road modes enhance the Urus performance even more: NEVE ensures ease and safety even on slippery surfaces; TERRA ensures comfort and ease in off-road conditions; SABBIA is perfect for sandy surfaces. Finally, the EGO mode enables the driver to redefine the vehicle’s dynamics according to preferences and needs in terms of steering, suspension and traction.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>TECHNOLOGY & INFOTAINMENT</h3>
+      <img src="img/mesin/teknologiinfotemen.jpg" height="170px;">
+      <p style="overflow: scroll; height: 300px;">Lamborghini Infotainment System III (LIS III) provides astonishing technological comfort including two intuitive touchscreens with haptic feedback, interactive voice commands and a total of three innovative high-definition displays. In the cockpit, their representations and icons change according to each driving mode selection. A high quality of usability is also guaranteed by an up-to-date multi-connection concept, which improves safety and entertainment.</p>
+    </div>
+    <div class="gallery-cell">
+      <h3>DRIVETRAIN & CHASSIS</h3>
+      <img src="img/mesin/chasis.jpg" height="170px;">
+      <p style="overflow: scroll; height: 300px;">Urus is equipped with state-of-the-art of vehicle dynamics technology and features excellent adaptive technologies for every situation and road condition: 4-wheel drive system with active rear torque vectoring, 4-wheel steering, adaptive air suspension, electromechanical active roll stabilization system with continuous and immediate response and CCB (Carbon Ceramic Brakes), offering the best braking performance in the SUV segment. This unique technical package is fully managed by the ANIMA Selector and gives Urus the outstanding driving dynamics and handling of a pure Lamborghini.</p>
     </div>
   </div>
-  <br>
-  custom carosel
-  <br>
+
+  <br><br>
 
   <!-- SPECIFICATION -->
   <div class="container">
@@ -323,7 +342,6 @@
   </div>
 
   <br><br>
-
 
   <div class="row">
     <div class="col-sm-2" style="height: 400px; background-color: red";>
