--- a/Models/Urus.html
+++ b/Models/Urus.html
@@ -297,6 +297,7 @@
 
 	<br><br>
 	
+	<!-- custom slider -->
 	<div class="gallery js-flickity">
 	  <div class="gallery-cell">
 	  	<h3>ENGINE & TRANSMISSION</h3>
