--- a/Models/Huracan_RWD.html
+++ b/Models/Huracan_RWD.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/custom_models.css">
   <link rel="stylesheet" type="text/css" href="css/flickity.css">
   <script src="js/flickity.pkgd.js" type="text/javascript" charset="utf-8" async defer></script>
-
+  <link rel="stylesheet" href="1.css">
   <script src="js/custom_spek.js" type="text/javascript"></script>
   <script src="js/custom_model.js" type="text/javascript"></script>
 
@@ -124,7 +124,7 @@
     </div>
   </nav> 
 
-  <img src="img/rwd/rwdlayarutama.png" alt="">
+  <img src="img/rwd/rwdlayarutama.png" width="100%">
 
   <br>
   <div class="row" style="font-size: 16px">
@@ -204,7 +204,7 @@
   </div>
   <br>
 
-  <img src="img/rwd/rwd5- 1128x400.png" alt="">
+  <img src="img/rwd/rwd5.png" alt="">
   <br>
 
   <div class="gallery js-flickity">
