--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
 					</div>
 					<div class="col-sm-6" style="height: 200px;">
 						<div class="row hovereffect">	
-					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
-					        <div class="overlay">
-					           	<h2>Hover effect 3</h2>
-								<p>asdasd</p>
-					           	<a class="info" href="#">Read More</a>
-					        </div>
+			        <img class="img-responsive" src="img/cris-ovalle-546183-unsplash.jpg" width="100%">
+			        <div class="overlay">
+		           	<h2>AVENTADOR S: THE SUPER SPORTS CAR WITH AN UNMISTAKABLE IDENTITY</h2>
+								<p>The design of Aventador S combines Lamborghini’s DNA with aerodynamic solutions that make it a work of art born to slice through air up to the amazing top speed of 350 km/h (217 mph). Every detail has been finely developed to express its unmistakable identity. It’s impossible to mix it up with any other vehicle, don’t you think?</p>
+		           	<a class="info" href="#">Read More</a>
+			        </div>
 						</div>
 					</div>
 					<div class="col-sm-6" style="height: 200px;">
@@ -263,12 +263,12 @@
 			</div>
 			<div  class="col-sm-4" style="height: 200px;">
 				<div class="row hovereffect ">	
-			        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
-			        <div class="overlay">
-			           	<h2>Hover effect 3</h2>
+	        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
+	        <div class="overlay">
+	         	<h2>Hover effect 3</h2>
 						<p>asdasd</p>
-			           	<a class="info" href="#">Read More</a>
-			        </div>
+           	<a class="info" href="#">Read More</a>
+	        </div>
 				</div>
 			</div>
 		</div>
@@ -277,12 +277,12 @@
 				<div class="row">
 					<div class="col-sm-12" style="height: 200px;">
 						<div class="row hovereffect">	
-					        <img class="img-responsive" src="img/arun-kuchibhotla-523600-unsplash.jpg" width="100%">
-					        <div class="overlay">
-					           	<h2>HURACÁN EVO: EVERY CHAMPION HAS A STYLE</h2>
-											<p>Andrea Cassarà is an Italian fencer, an Olympic Gold Medalist in Athens 2004 and London 2012, as well as an 8-time World Champion. During the visit he paid to the Automobili Lamborghini headquarters, he was fascinated by the staggering technological level of the exhilarating Huracán EVO. </p>
-					           	<a class="info" href="#">Read More</a>
-					        </div>
+			        <img class="img-responsive" src="img/arun-kuchibhotla-523600-unsplash.jpg" width="100%">
+			        <div class="overlay">
+		           	<h2>HURACÁN EVO: EVERY CHAMPION HAS A STYLE</h2>
+								<p>Andrea Cassarà is an Italian fencer, an Olympic Gold Medalist in Athens 2004 and London 2012, as well as an 8-time World Champion. During the visit he paid to the Automobili Lamborghini headquarters, he was fascinated by the staggering technological level of the exhilarating Huracán EVO. </p>
+		           	<a class="info" href="#">Read More</a>
+			        </div>
 						</div>
 					</div>
 					<div class="col-sm-6" style="height: 200px;">
