--- a/Models/Aventador_SVJ.html
+++ b/Models/Aventador_SVJ.html
@@ -192,11 +192,11 @@
 
   <!-- SPECIFICATION -->
   <div class="container">
-    <button class="tablink" onclick="openPage('Engine', this, 'red')" id="defaultOpen">ENGINE</button>
-    <button class="tablink" onclick="openPage('Transmision', this, 'green')">TRANSMISION</button>
-    <button class="tablink" onclick="openPage('Performance', this, 'blue')">PERFORMANCE</button>
-    <button class="tablink" onclick="openPage('Braking_System', this, 'orange')">BRAKING SYSTEM</button>
-    <button class="tablink" onclick="openPage('Dimension', this, 'yellow')">DIMENSION</button>
+   <button class="tablink" onclick="openPage('Engine', this, '#8C515C')" id="defaultOpen">ENGINE</button>
+    <button class="tablink" onclick="openPage('Transmision', this, '#403440')">TRANSMISION</button>
+    <button class="tablink" onclick="openPage('Performance', this, '#5D8C84')">PERFORMANCE</button>
+    <button class="tablink" onclick="openPage('Braking_System', this, '#F27272')">BRAKING SYSTEM</button>
+    <button class="tablink" onclick="openPage('Dimension', this, '#D97E7E')">DIMENSION</button>
 
     <div id="Engine" class="tabcontent">
       <div class="row" style="height: 100px; ">
