--- a/Brand/Marcello.html
+++ b/Brand/Marcello.html
@@ -143,11 +143,9 @@
     <br>
     
     <div class="row " style="height: 100px">
-      <div class="col-md-6" style="background: red">
-        Image <!-- diisi gambar Mobil -->
-      </div>
-      <div class="col-md-6" style="background: green">
-        kata-kata 
+      <div class="col-md-4"></div>
+      <div class="col-md-8">
+        <h3>"It was the perfect moment when I finally decided to create the perfect car"</h3> 
       </div>
     </div>  
   </div> <!-- end container -->
