--- a/Motorsport/Motorsport.html
+++ b/Motorsport/Motorsport.html
@@ -120,6 +120,7 @@
     </div>
   </nav>
 
+  <img src="img/1.png" width="100%">
 
   <!-- LAMBORGHINI SUPER TROFEO -->
   <div class="container">
@@ -134,31 +135,19 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div style="background-color: yellow; height: 400px">
-          Menu 2
-
-          IMAGE
-
+        <div style="height: 400px">
+          <br><br><br><img src="img/2.png" width="150%">
         </div>
-        <div style="background: none; height: 100px">Keterangan gambar</div>
       </div>  
     </div>
   </div>
-
-  <br>
-  IMAGE kanan kiri...
-  <br>
-    
   <!-- GT CUSTOMER RACING -->
   <div class="container">
     <div class="row">
       <div class="col-md-6">
         <div style="background-color: yellow; heig ">
-
-          IMAGE
-          
+          <img src="img/3.png" width="107%">
         </div>
-        <div style="background: none; height: 100px">Keterangan gambar</div>
       </div>  
       <div class="col-md-6">
         <div style="background: none; height: 100px"></div>
@@ -171,11 +160,7 @@
       </div>
     </div>
   </div>
-
-  <br>
-  IMAGE kanan kiri...
-  <br>
-
+  <img src="img/4.png" alt="">
   <!-- LAMBORGHINI ACCADEMIA -->
   <div class="container">
     <div class="row">
@@ -195,13 +180,9 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div style="background-color: yellow; height: 400px">
-          Menu 2
-
-          IMAGE
-
+        <div>
+          <br><br><br><img src="../img/urus/2.png" width="150%">
         </div>
-        <div style="background: none; height: 100px">Keterangan gambar</div>
       </div>  
     </div>
   </div>
