--- a/Ownership/Accessori.html
+++ b/Ownership/Accessori.html
@@ -119,9 +119,34 @@
       </div>
   </nav>
 
-  <div style="background: red">
-    <img src="asd" alt="">
+  <img src="img/1.png" width="100%">
+
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
+        <h2><b>ACCESSORI ORIGINALI HURACÁN</b></h2>
+      <p>
+          Lamborghini Huracán is the perfect fusion between technology and design. Its crisp, streamlined lines are designed to cut through the air and tame the road, while the prestigious finishes crafted by skilled Italian artisans will give you a thrill just by looking at them. Your heart will leap when you sit inside and press the ignition button, feeling what it means to have a naturally aspirated V10 engine behind you and all the technology you need to control it at your fingertips. And if you want to go even further, Accessori Originali allows you to exceed all quality and service expectations by customizing every detail to make your Huracán unique and exclusively yours.
+        </p>
+      </div>
+    </div>
+    <div class="col-md-6"></div>
   </div>
+  <img src="img/2.png" width="100%">
+
+
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
+        <h2><b>ACCESSORI ORIGINALI AVENTADOR</b></h2>
+      <p>
+          Revolutionary thinking is the name of the game at Lamborghini: whether it is an aeronautics-inspired design, technologies like the V12 engine or use of carbon fiber materials, defying commonly accepted limits is part of our philosophy. The new Aventador models have been designed to exceed the very concept of performance, establishing a new benchmark for supersports cars and turning the cars of the future into a present-day reality. A supercar family that has already become a legend in its own right. These values do not merely apply to the production of cars, but also to Accessori Originali. Each individual accessory boasts first-rate quality, top-level technology, Lamborghini design and is finely finished down to the smallest detail.
+        </p>
+      </div>
+    </div>
+    <div class="col-md-6"></div>
+  </div>
+  <img src="img/3.png" width="100%">
 
   <footer class="footer">
     <div class="container bottom_border">
