--- a/Ownership/Sparepart.html
+++ b/Ownership/Sparepart.html
@@ -120,9 +120,8 @@
       </div>
   </nav>
 
-
-
-
+  <img src="img/Sp1.png" width="100%">
+  <br><br><br>
   <div class="container">  
     <div class="text-center">
       <h2>SPARE PARTS</h2><hr>
@@ -133,9 +132,9 @@
   </div> <!-- end conainer -->
   
   <br>
-  <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/spare-parts/spare-parts.jpg" alt="">
-  <br>
-
+  <img src="img/Sp2.png" width="100%">
+  
+  <br><br>
   <div class="container">
     <div class="row col-md-6">
       <h2><b>GENUINE HISTORIC</b>SPARE PARTS</h2>
@@ -144,31 +143,9 @@
     </div>
   </div>
 
-
-  <!-- image -->
-
-
-
-    <svg id="block1-skew-1" class="skew-left" xmlns="http://www.w3.org/2000/svg" aria-labelledby="desc">
-      <desc>Detail of a vintage engine</desc>            
-      <svg viewBox="0 0 2.5 1" preserveAspectRatio="xMidYMid slice">
-        <clipPath id="block1-skew-1-mask">
-          <polygon fill="yellow" points="0.83909963117728 0, 2.5 0, 1.6609003688227 1 , 0 1, 0.83909963117728 0"></polygon>
-        </clipPath>
-        <image clip-path="url(#block1-skew-1-mask)" preserveAspectRatio="xMidYMid slice" height="100%" width="100%" xlink:href="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/spare-parts/left1.jpg" lazy-src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/spare-parts/left1.jpg" class="ng-scope" style="opacity: 1;"></image>
-        </svg>
-    </svg>                
-
-    <svg id="block1-skew-2" class="skew-right" xmlns="http://www.w3.org/2000/svg" aria-labelledby="desc">
-      <desc>Cropped image of engine mechanisms</desc>            
-      <svg viewBox="0 0 2.5 1" preserveAspectRatio="xMidYMid slice">
-      <clipPath id="block1-skew-2-mask">
-        <polygon fill="green" points="0.86767105974871 0, 2.5 0, 1.6609003688227 1 , 0.028571428571429 1, 0.86767105974871 0"></polygon>
-      </clipPath>
-      <image clip-path="url(#block1-skew-2-mask)" preserveAspectRatio="xMidYMid slice" height="100%" width="100%" xlink:href="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/spare-parts/right1.jpg" lazy-src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/spare-parts/right1.jpg" class="ng-scope" style="opacity: 1;"></image>
-      </svg>
-    </svg>            
-
+  <img src="img/Sp3.png" width="100%">
+  <br><br>
+  
   <div class="container">
     <div class="row col-md-6">
       <h2><b>PIRELLI</b>MARKED TYRES</h2>
@@ -179,13 +156,7 @@
   </div>
 
 
-  
-  <!-- slider -->
-  <!-- cari tahu -->
-                
-
-
-
+  <img src="img/Sp4.png" width="100%">
 
 
 
