--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
       			<div class="carousel-item active">
 			        <img src="img/duaaa.png" class="d-block w-100" alt="...">
 			        <div class="carousel-caption d-none d-md-block">
-			          <h5>First slide label</h5>
-			          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+			          <h5>HURACAN EVO</h5>
+			          <p>Every day Amplified</p>
 			        </div>
       			</div>
       		<!-- CARAUSEL 2 -->
       		<div class="carousel-item">
 		        <img src="img/satuu.png" class="d-block w-100" alt="...">
 		        <div class="carousel-caption d-none d-md-block">
-		          <h5>Second slide label</h5>
-		          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		          <h5>AVENTADOR SVJ</h5>
+		          <p>Real Emotins With The Futures</p>
 		        </div>
       		</div>
       		<!-- CARAUSEL 3 -->
@@ -160,10 +160,6 @@
 		        <video class="video-fluid" autoplay loop muted style="width: 100%;">
 			        <source src="Videos/Lamborghini Huracán EVO Every Day Amplified_2.mp4" type="video/mp4"/>
 			      </video>
-		        <div class="carousel-caption d-none d-md-block">
-		          <h5>Third slide label</h5>
-		          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-		        </div>
       		</div>
   			</div>
 			<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -211,15 +207,15 @@
 						<div class="row hovereffect">	
 			        <img class="img-responsive" src="img/cris-ovalle-546183-unsplash.jpg" width="100%">
 			        <div class="overlay">
-		           	<h2>AVENTADOR S: THE SUPER SPORTS CAR WITH AN UNMISTAKABLE IDENTITY</h2>
-								<p>The design of Aventador S combines Lamborghini’s DNA with aerodynamic solutions that make it a work of art born to slice through air up to the amazing top speed of 350 km/h (217 mph). Every detail has been finely developed to express its unmistakable identity. It’s impossible to mix it up with any other vehicle, don’t you think?</p>
+		           	<h2>THE SUPER SPORTS CAR WITH AN UNMISTAKABLE</h2>
+								<p>The design of Aventador S combines Lamborghini’s DNA with aerodynamic solutions that make it a work of art born to slice.</p>
 		           	<a class="info" href="#">Read More</a>
 			        </div>
 						</div>
 					</div>
 					<div class="col-sm-6" style="height: 200px;">
 						<div class="row hovereffect">	
-			        <img class="img-responsive" src="img/foto/austin-distel-2vCqH34PqWs-unsplash.jpg" alt="">
+			        <img class="img-responsive" src="img/foto/abolfazl-bahadori-Goe0YHDCwXk-unsplash.jpg" width="100%">
 			        <div class="overlay">
 		           	<h2>LAMBORGHINI LAUNCHES THE FUTURE FAB AWARD</h2>
 								<p>As an international brand brought to life by a dedicated team of people.</p>
@@ -255,19 +251,17 @@
 				<div class="row hovereffect">	
 			        <img class="img-responsive" src="img/foto/lamborghini-huracan-3080405.jpg" width="100%">
 			        <div class="overlay">
-			           	<h2>Hover effect 3</h2>
-									<p>asdasd</p>
+			           	<h2>SUPER TROFEO ASIA 2019 ROUND 2: SUZUKA</h2>
+									<p>The Lamborghini Super Trofeo Asia races the first of the 2 stages in Japan on the Suzuka Circuit.</p>
 			           	<a class="info" href="#">Read More</a>
 			        </div>
 				</div>
 			</div>
 			<div  class="col-sm-4" style="height: 200px;">
-				<div class="row hovereffect ">	
-	        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
-	        <div class="overlay">
-	         	<h2>Hover effect 3</h2>
-						<p>asdasd</p>
-           	<a class="info" href="#">Read More</a>
+				<div class="row" style="background-color: #A8A8A8">
+	        <div style="margin: 10px;">
+	         	<h2>SUPER TROFEO ASIA 2019 ROUND 3: FUJI SPEEDWAY</h2>
+						<p>The Fuji International Speedway in the foothills of Mount Fuji hosts the third round of the Lamborghini Super Trofeo Asia.</p>
 	        </div>
 				</div>
 			</div>
@@ -280,7 +274,7 @@
 			        <img class="img-responsive" src="img/arun-kuchibhotla-523600-unsplash.jpg" width="100%">
 			        <div class="overlay">
 		           	<h2>HURACÁN EVO: EVERY CHAMPION HAS A STYLE</h2>
-								<p>Andrea Cassarà is an Italian fencer, an Olympic Gold Medalist in Athens 2004 and London 2012, as well as an 8-time World Champion. During the visit he paid to the Automobili Lamborghini headquarters, he was fascinated by the staggering technological level of the exhilarating Huracán EVO. </p>
+								<p>Andrea Cassarà is an Italian fencer, an Olympic Gold Medalist in Athens 2004 and London 2012, as well as an 8-time World Champion. During the visit he paid to the Automobili Lamborghini headquarters, he was fascinated by the staggering technological level of the exhilarating Huracán EVO.</p>
 		           	<a class="info" href="#">Read More</a>
 			        </div>
 						</div>
@@ -290,17 +284,17 @@
 					        <img class="img-responsive" src="img/james-perez-1370885-unsplash.jpg" width="100%">
 					        <div class="overlay">
 					           	<h2>SUPER TROFEO ASIA 2019</h2>
-											<p>asdasd</p>
+											<p>Andrea Cassarà is an Italian fencer, an Olympic Gold Medalist in Athens 2004 and London 2012.</p>
 					           	<a class="info" href="#">Read More</a>
 					        </div>
 						</div>
 					</div>
 					<div class="col-sm-6" style="height: 200px;">
 						<div class="row hovereffect">	
-					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
+					        <img class="img-responsive" src="img/foto/lamborghini-618337.jpg" width="100%">
 					        <div class="overlay">
-					           	<h2>2</h2>
-								<p>asdasd</p>
+					           	<h2>SUPER TROFEO EUROPE 2019 ROUND 3: ZANDVOORT</h2>
+											<p>The Lamborghini Super Trofeo Europe arrives for the first time among the Dutch dunes of Zandvoort, once the stage of 30 F1 Dutch GPs.</p>
 					           	<a class="info" href="#">Read More</a>
 					        </div>
 						</div>
@@ -309,10 +303,10 @@
 			</div>
 			<div class="col-sm-4" style="height: 400px;">
 				<div class="row hovereffect">	
-			        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
+			        <img class="img-responsive" src="img/viktor-theo-1167316-unsplash.jpg" width="100%">
 			        <div class="overlay">
-			           	<h2>3</h2>
-						<p>asdasd</p>
+			           	<h2>SUPER TROFEO EUROPE 2019 ROUND 4: SPA-FRANCORCHAMPS</h2>
+									<p>A historic appointment for the Lamborghini Super Trofeo Europe is the race in Spa-Francorchamps in conjunction with the famous 24 Hours.</p>
 			           	<a class="info" href="#">Read More</a>
 			        </div>
 				</div>
