--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- AJaX -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-	<script src="/custom.js" type="text/javascript"></script>
+	<script src="custom/custom.js" type="text/javascript"></script>
 
 	<!-- title -->
 	<title>FIPRO</title>
